# RGBDDenseReconstruction

./: CMakeLists.txt  README.md  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
results/: README.md  map.pcd
